# RU-Replacer

./: .gitignore  Cargo.toml  бандиты ельцина.xlsx  словарь 101.xlsx  список задач и изменений.txt
dictionary/: Главный словарь.xlsx  бандиты ельцина.xlsx  замена.xlsx
src/: check_1.rs  dictionary_0.rs  import.rs  import_xls.rs  lib_1.rs  main.rs  test_0.rs  write.rs
