[package]
name = "replace_all"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
calamine = "0.27.0"
rust_xlsxwriter = "0.86.1"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
rtf-parser = "0.4.2"
#доп

anyhow = "1.0.98"
clap = "4.5.37"
docx-rs = "0.4.17"
serde_json = "1.0.140"
convert_case = "0.8.0"
